[gd_scene load_steps=3 format=3 uid="uid://cjqvqwm2xpq4t"]

[ext_resource type="Script" path="res://scripts/card_field.gd" id="1_2hyyr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ylydq"]
size = Vector2(86, 124)

[node name="CardField" type="Area2D"]
script = ExtResource("1_2hyyr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ylydq")

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="child_exiting_tree" from="." to="." method="_on_child_exiting_tree"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
